--- a/public/css/sass/components/SegmentsContainer.scss
+++ b/public/css/sass/components/SegmentsContainer.scss
@@ -83,7 +83,7 @@
   z-index: 2;
   width: 100%;
   padding-left: 5%;
-  background-color: colors.$grey5;
+  background-color: colors.$grey50;
 
   &.sticky-project-bar-compressed {
     padding-top: 10px;
